# readbase

./: .env.example  .gitignore  README.md  alembic.ini  openapi.json  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  tsconfig.json
alembic/: env.py
alembic/versions/: 20260518_0001_admin_member_workspaces.py  20260518_0002_hierarchy_graph.py  20260519_0003_workspace_connectors.py  20260520_0004_jira_connector.py  20260520_0005_github_connections.py  20260520_0006_slack_connector.py  20260521_0007_multi_connectors.py  20260526_0008_slack_workspace_access_cache.py  20260529_0009_notion_connector.py  20260529_0010_workspace_jira_site.py  20260603_0011_organizations.py  20260609_0012_workspace_join_code.py  (+9 more)
docs/: REQUIREMENTS.md
frontend/: .env.development  .env.development.local.example  app.ts  index.html  package-lock.json  package.json  vite.config.ts
readbase/: __init__.py  cli.py  settings.py
readbase.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: export_openapi.py  generate_api_types.py  migrate_storage_layout.py  migrate_workspace_sources_to_org.py  setup_local_ssl.sh
src/: cli.py
static/: app.js  index.html  styles.css
tests/: test_answerer.py  test_auth_service.py  test_database.py  test_github_service.py  test_hierarchy_graph_api.py  test_jira_service.py  test_notifications_api.py  test_organization_service.py  test_retriever.py  test_slack_service.py  test_storage_context.py  test_storage_migrate_layout.py  test_workspace_api.py  test_workspace_service.py
(+239 files in other folders)
